--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,11 +6,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Pollify helps companies build a strong community and create an environment employees love. Whether it's HR gathering feedback, team leads planning events, or managers understanding team sentiment, Pollify is here to help."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
-    <title>React App</title>
+    <title>Pollify</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
